add grid control for displaying nodes

--- a/WpfSquardleSolver/WpfSquardleSolver.csproj
+++ b/WpfSquardleSolver/WpfSquardleSolver.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GraphWalking\GraphWalking.csproj" />
+  </ItemGroup>
+
 </Project>
