remove tutorial wpf project fix asynchronous word finder

--- a/WpfSquardleSolver/WpfSquardleSolver.csproj
+++ b/WpfSquardleSolver/WpfSquardleSolver.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\GraphWalking\GraphWalking.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="words_alpha.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
