--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,10 @@
 # Remove the line below if you want to inherit .editorconfig settings from higher directories
 root = true
 
+# All files
+[*]
+guidelines = 80 dashed, 100
+
 # C# files
 [*.cs]
 
