--- a/WpfSquardleSolver/WpfSquaredleSolver.csproj
+++ b/WpfSquardleSolver/WpfSquaredleSolver.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>SquaredleSolver.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="SquaredleSolver.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GraphWalking\GraphWalking.csproj" />
