use wpf models in console app benchmark change text displayed when puzzle is fully explored remove unused code

--- a/ConsoleApp/ConsoleApp.csproj
+++ b/ConsoleApp/ConsoleApp.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GraphWalking\GraphWalking.csproj" />
+    <ProjectReference Include="..\WpfSquardleSolver\WpfSquaredleSolver.csproj" />
   </ItemGroup>
 
   <ItemGroup>
