--- a/WpfSquardleSolver/WpfSquaredleSolver.csproj
+++ b/WpfSquardleSolver/WpfSquaredleSolver.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GraphWalking\GraphWalking.csproj" />
+    <ProjectReference Include="..\SquaredleSolver\SquaredleSolver.csproj" />
   </ItemGroup>
 
   <ItemGroup>
